initial styling and routes added

--- a/client/index.jade
+++ b/client/index.jade
@@ -1,10 +1,10 @@
 doctype html
-html(ng-app='mean-template', lang='en')
+html(ng-app='runner', lang='en')
   head
     meta(charset='utf-8')
     meta(http-equiv='X-UA-Compatible', content='IE=edge')
     meta(name='viewport', content='width=device-width, initial-scale=1')
-    title MEAN Template
+    title Runner
     link(href='/vendor/bootstrap/dist/css/bootstrap.css', rel='stylesheet')
     link(href='/vendor/fontawesome/css/font-awesome.css', rel='stylesheet')
     link(href='/vendor/toastr/toastr.css', rel='stylesheet')
@@ -28,6 +28,11 @@ html(ng-app='mean-template', lang='en')
     script(src='/index.js')
     script(src='/nav.js')
     script(src='/views/home/home.js')
+    script(src='/views/dashboard/dashboard.js')
+    script(src='/views/clients/clients.js')
+    script(src='/views/therapists/therapists.js')
+    script(src='/views/schedule/schedule.js')
+    script(src='/views/review/review.js')
     script(src='/views/register/register.js')
     script(src='/views/login/login.js')
     script(src='/views/logout/logout.js')
