--- a/client/index.less
+++ b/client/index.less
@@ -1,27 +1,18 @@
-// http://clrs.cc/
-
-@NAVY:    #001F3F;
-@BLUE:    #0074D9;
-@AQUA:    #7FDBFF;
-@TEAL:    #39CCCC;
-@OLIVE:   #3D9970;
-@GREEN:   #2ECC40;
-@LIME:    #01FF70;
-@YELLOW:  #FFDC00;
-@ORANGE:  #FF851B;
-@RED:     #FF4136;
-@MAROON:  #85144B;
-@FUCHSIA: #F012BE;
-@PURPLE:  #B10DC9;
-@BLACK:   #111111;
-@GRAY:    #AAAAAA;
-@SILVER:  #DDDDDD;
-
 body{
-  background-color: @YELLOW;
+  //background-image: url('assets/img/weave.png');
 }
 
-input.ng-invalid, select.ng-invalid{
-  background-color: @RED;
+#register, #login{
+  text-align: center;
 }
+
+form{
+  margin: auto;
+  text-align: left;
+
+  input.ng-invalid, select.ng-invalid{
+    background-color: RGBA(238, 108, 112, 1);
+  }
+}
+
 
