--- a/client/index.jade
+++ b/client/index.jade
@@ -8,7 +8,10 @@ html(ng-app='runner', lang='en')
     link(href='/vendor/bootstrap/dist/css/bootstrap.css', rel='stylesheet')
     link(href='/vendor/fontawesome/css/font-awesome.css', rel='stylesheet')
     link(href='/vendor/toastr/toastr.css', rel='stylesheet')
+    link(href='/vendor/ng-table/ng-table.min.css', rel='stylesheet')
     link(href='/index.css', rel='stylesheet')
+    link(href='/views/therapists/therapists.css', rel='stylesheet')
+    link(href='/views/clients/clients.css', rel='stylesheet')
   body
     include nav
     .container
@@ -17,10 +20,13 @@ html(ng-app='runner', lang='en')
           #container(ng-view)
 
     script(src='/vendor/jquery/dist/jquery.js')
+    script(src='/vendor/ng-file-upload/angular-file-upload-shim.min.js')
     script(src='/vendor/angular/angular.js')
+    script(src='/vendor/ng-file-upload/angular-file-upload.min.js')
     script(src='/vendor/angular-route/angular-route.js')
     script(src='/vendor/bootstrap/dist/js/bootstrap.js')
     script(src='/vendor/underscore/underscore.js')
+    script(src='/vendor/ng-table/ng-table.min.js')
     script(src='/vendor/toastr/toastr.js')
     script(src='/vendor/localforage/dist/localforage.js')
     script(src='/vendor/angular-localforage/dist/angular-localForage.js')
@@ -33,10 +39,11 @@ html(ng-app='runner', lang='en')
     script(src='/views/therapists/therapists.js')
     script(src='/views/schedule/schedule.js')
     script(src='/views/review/review.js')
-    script(src='/views/register/register.js')
-    script(src='/views/login/login.js')
     script(src='/views/logout/logout.js')
     script(src='/components/factories/home.js')
     script(src='/components/factories/user.js')
+    script(src='/components/factories/client.js')
+    script(src='/components/factories/therapist.js')
+    script(src='/components/factories/treatment.js')
     script(src='/components/factories/http-interceptor.js')
 
