minimal function completed

--- a/client/index.jade
+++ b/client/index.jade
@@ -12,6 +12,8 @@ html(ng-app='runner', lang='en')
     link(href='/index.css', rel='stylesheet')
     link(href='/views/therapists/therapists.css', rel='stylesheet')
     link(href='/views/clients/clients.css', rel='stylesheet')
+    link(href='/views/schedule/schedule.css', rel='stylesheet')
+    link(href='/views/review/review.css', rel='stylesheet')
   body
     include nav
     .container
@@ -25,6 +27,8 @@ html(ng-app='runner', lang='en')
     script(src='/vendor/ng-file-upload/angular-file-upload.min.js')
     script(src='/vendor/angular-route/angular-route.js')
     script(src='/vendor/bootstrap/dist/js/bootstrap.js')
+    script(src='/vendor/angular-bootstrap/ui-bootstrap-tpls.min.js')
+    script(src='/vendor/angular-ui-utils/ui-utils.min.js')
     script(src='/vendor/underscore/underscore.js')
     script(src='/vendor/ng-table/ng-table.min.js')
     script(src='/vendor/toastr/toastr.js')
