--- a/client/views/clients/clients.less
+++ b/client/views/clients/clients.less
@@ -1,5 +1,4 @@
 h2{
-  text-align: center;
 }
 
 tr:active, tr:hover{
@@ -10,4 +9,13 @@ tr:active, tr:hover{
   height: 300px;
   width: 300px;
   background-size: cover;
+}
+
+.nested{
+  margin: 0;
+}
+
+.rug{
+  overflow: auto;
+  height: 540px;
 }
