--- a/client/views/therapists/therapists.less
+++ b/client/views/therapists/therapists.less
@@ -1,5 +1,4 @@
 h2{
-  text-align: center;
 }
 
 tr:active, tr:hover{
@@ -10,4 +9,8 @@ tr:active, tr:hover{
   height: 300px;
   width: 300px;
   background-size: cover;
+}
+
+.cell{
+  width: 70px;
 }
