--- a/client/nav.jade
+++ b/client/nav.jade
@@ -11,11 +11,16 @@
     .collapse.navbar-collapse#bs-navbar-collapse
       ul.nav.navbar-nav.navbar-right(ng-hide='email')
       ul.nav.navbar-nav.navbar-right(ng-show='email')
-        li: a(href='/#/dashboard') Dashboard
-        li: a(href='/#/clients') Clients
-        li: a(href='/#/therapists') Therapists
-        li: a(href='/#/schedule') Schedule
-        li: a(href='/#/review') Review
-        li: a(href='/#/logout') Logout
-        li: a(href='') {{email}}
+        li.dropdown: a.dropdown-toggle(href='#', data-toggle='dropdown') Dashboard &nbsp
+          span.caret
+          ul.dropdown-menu(role='menu')
+            li: a(href='/#/clients') Clients
+            li: a(href='/#/therapists') Therapists
+            li: a(href='/#/schedule') Schedule
+            li: a(href='/#/review') Review
+        li.dropdown: a.dropdown-toggle(href='#', data-toggle='dropdown') {{email}} &nbsp
+          span.caret
+          ul.dropdown-menu(role='menu')
+            li: a(href='/#/profile') Edit Profile
+            li: a(href='/#/logout') Logout
 
