--- a/client/views/clients/clients.less
+++ b/client/views/clients/clients.less
@@ -9,13 +9,37 @@ tr:active, tr:hover{
   height: 300px;
   width: 300px;
   background-size: cover;
-}
-
-.nested{
-  margin: 0;
+  margin: auto;
+  margin-top: 20px;
 }
 
 .rug{
   overflow: auto;
   height: 540px;
+}
+
+.panel-heading{
+  margin-top: 12px;
+}
+
+.panel-title:hover{
+  cursor: pointer;
+}
+
+.btn{
+  margin: 10px;
+}
+
+.table{
+  margin-bottom: 0px;
+}
+
+.good{
+  color: green;
+  font-weight: bold;
+}
+
+.bad{
+  color: red;
+  font-weight: bold;
 }
