--- a/client/nav.jade
+++ b/client/nav.jade
@@ -1,12 +1,12 @@
 .navbar.navbar-default(role='navigation', ng-controller='NavCtrl')
-  .container
+  .container-fluid
     .navbar-header
       button.navbar-toggle(data-toggle='collapse', data-target='#bs-navbar-collapse')
         span.sr-only Toggle navigation
         span.icon-bar
         span.icon-bar
         span.icon-bar
-      a.navbar-brand(href='/#/dashboard') Runner
+      a.navbar-brand(href='/#/dashboard'): i.fa.fa-calculator &nbsp Runner
 
     .collapse.navbar-collapse#bs-navbar-collapse
       ul.nav.navbar-nav.navbar-right(ng-hide='email')
