--- a/client/views/therapists/therapists.less
+++ b/client/views/therapists/therapists.less
@@ -9,8 +9,22 @@ tr:active, tr:hover{
   height: 300px;
   width: 300px;
   background-size: cover;
+  margin: auto;
+  margin-top: 20px;
 }
 
 .cell{
   width: 70px;
+}
+
+.panel-heading{
+  margin-top: 12px;
+}
+
+.panel-title:hover{
+  cursor: pointer;
+}
+
+.btn{
+  margin: 10px;
 }
