basic styling added to the scheduling page

--- a/client/index.jade
+++ b/client/index.jade
@@ -16,7 +16,7 @@ html(ng-app='runner', lang='en')
     link(href='/views/review/review.css', rel='stylesheet')
   body
     include nav
-    .container-fluid
+    .container-fluid#body
       .row
         .col-xs-12
           #container(ng-view)
