--- a/client/index.less
+++ b/client/index.less
@@ -1,6 +1,10 @@
 body{
   //background-image: url('assets/img/weave.png');
-  margin: 20px;
+  font-family: helvetica;
+}
+
+#body{
+  margin: 30px;
 }
 
 #register, #login{
