--- a/client/nav.jade
+++ b/client/nav.jade
@@ -6,7 +6,7 @@
         span.icon-bar
         span.icon-bar
         span.icon-bar
-      a.navbar-brand(href='/#/dashboard'): i.fa.fa-calculator &nbsp Runner
+      a.navbar-brand(href='/#'): i.fa.fa-calculator &nbsp Runner
 
     .collapse.navbar-collapse#bs-navbar-collapse
       ul.nav.navbar-nav.navbar-right(ng-hide='email')
@@ -21,6 +21,6 @@
         li.dropdown: a.dropdown-toggle(href='#', data-toggle='dropdown') {{email}} &nbsp
           span.caret
           ul.dropdown-menu(role='menu')
-            li: a(href='/#/profile') Edit Profile
+            //li: a(href='/#/profile') Edit Profile
             li: a(href='/#/logout') Logout
 
