--- a/client/views/clients/clients.less
+++ b/client/views/clients/clients.less
@@ -13,8 +13,15 @@ tr:active, tr:hover{
   margin-top: 20px;
 }
 
-.rug{
+.rug-heading, .rug-body{
   overflow: auto;
+}
+
+.rug-heading{
+  padding-right: 15px;
+}
+
+.rug-body{
   height: 540px;
 }
 
@@ -34,12 +41,59 @@ tr:active, tr:hover{
   margin-bottom: 0px;
 }
 
+.calculator {
+  th, td{
+    text-align: center;
+    vertical-align: bottom;
+  }
+
+  th:nth-child(1), td:nth-child(1){
+    font-weight: bold;
+    width: 5%;
+  }
+
+  th:nth-child(2), td:nth-child(2){
+    font-weight: bold;
+    width: 10%;
+  }
+
+  th:nth-child(3), td:nth-child(3){
+    width: 7.5%;
+  }
+
+  th:nth-child(4), td:nth-child(4){
+    color: green;
+    width: 8%;
+  }
+
+  th:nth-child(5), td:nth-child(5){
+    width: 8%;
+  }
+
+  th:nth-child(6), td:nth-child(6){
+    width: 8%;
+  }
+
+  th:nth-child(7), td:nth-child(7){
+    width: 8%;
+  }
+
+  th:nth-child(8), td:nth-child(8){
+    color: red;
+    width: 8%;
+  }
+
+  th:nth-child(9), td:nth-child(9){
+    width: 8%;
+  }
+}
+
 .good{
-  color: green;
+  //color: green;
   font-weight: bold;
 }
 
 .bad{
-  color: red;
+  //color: red;
   font-weight: bold;
 }
