--- a/client/views/schedule/schedule.less
+++ b/client/views/schedule/schedule.less
@@ -1,6 +1,12 @@
 .therapist{
+  background-color: lightgrey;
+  border-radius: 6px;
   width: 300px;
-  padding: 0;
+  padding: 10px;
   margin: 10px;
   display: inline-block;
+}
+
+h4{
+  font-weight: bold;
 }
