--- a/client/views/therapists/therapists.jade
+++ b/client/views/therapists/therapists.jade
@@ -1,94 +1,126 @@
 .row
   .col-xs-3
     h2 Therapists
-    br
-    button.btn.btn-primary(ng-click='init()') Add Therapist
-    br
-    table.table.table-hover(ng-table='tableParams', show-filter='true')
-      tbody
-        tr(ng-repeat='therapist in display', data-title='{{therapist.name}}', data-index='{{$index}}', ng-click='makeCurrent($index)'): a(href='')
-          td(data-title="'Name'", sortable='name', filter="{ 'name': 'text' }") {{therapist.name}}
-          td(data-title="'Disipline'", name="discipline", filter="{ 'discipline': 'select' }", filter-data="disciplines($column)") {{therapist.discipline}}
+    .row(ng-hide='add')
+      button.btn.btn-primary(ng-click='init()'): i.fa.fa-user &nbsp Add Therapist
+      table.table.table-hover(ng-table='tableParams', show-filter='true')
+        tbody
+          tr(ng-repeat='therapist in display', data-title='{{therapist.name}}', data-index='{{$index}}', ng-click='makeCurrent($index)'): a(href='')
+            td(data-title="'Name'", sortable='name', filter="{ 'name': 'text' }") {{therapist.name}}
+            td(data-title="'Disipline'", name="discipline", filter="{ 'discipline': 'select' }", filter-data="disciplines($column)") {{therapist.discipline}}
+    .row(ng-show='add')
+      form.form(role='form', novalidate, name='editForm')
+        .form-group
+          label(for='newTherapist') New Therapist Name:
+          input.form-control#newTherapist(required, ng-minlength='3', ng-model='newTherapist', type='text', autofocus)
+
+        button.btn.btn-warning(type='button', ng-click='cancel()') Cancel
+        button.btn.btn-primary.pull-right(ng-click='create()') Create
   .col-xs-1
   .col-xs-8
-    .row(ng-show='current.name')
+    .row(ng-show='therapist._id')
       tabset(justified='true')
         tab(heading='Profile')
           .col-xs-6
-            h3 {{current.name}}
+            h3 {{therapist.name}}
+            h4 Discipline: {{therapist.discipline}}
+            h4 Is Therapist: {{therapist.isTherapist}}
+            h4 Productivity: {{therapist.productivity}}
+            h4 Is Full Time: {{therapist.isFullTime}}
           .col-xs-6
-            .img(style='background-image: url("{{current.photo}}")')
-        tab(heading='Info')
+            .img(style='background-image: url("{{therapist.photo}}")')
+        //tab(heading='Info')
+          | Display Therapist Info Here
         tab(heading='Edit', ng-click='editTherapist()')
           .row
-            h3 Edit Therapist
-            form.form(role='form', novalidate, name='editForm')
-              .row
-                .col-xs-6
-                  .form-group
-                    input(type='hidden', ng-model='therapist._id', ng-value='{{therapist._id}}')
-                  .form-group
-                    label(for='name') Name
-                    input.form-control#name(required, ng-minlength='3', ng-model='therapist.name', type='text', name='name', autofocus)
-                  .form-group(ng-show='therapist._id')
-                    input(type='hidden', ng-model='curent._id')
-                    label(for='photo') Photo
-                    input.form-control#photo(type='file', ng-file-select='onFileSelect($files)', on-click='this.value = null')
-                  .form-group
-                    label(for='discipline') Discipline
-                    select.form-control#discipline(required, ng-model='therapist.discipline', name='discipline')
-                      option(value='') Select Discipline
-                      option PT
-                      option OT
-                      option ST
-                  .form-group
-                    label(for='productivity') Productivity %
-                    input.form-control#productivity(required, ng-model='therapist.productivity', type='number', name='productivity')
-                  .form-group
-                    label Is Therapist:
-                  .form-group
-                    | &nbsp
-                    input#isTherapist(ng-model='therapist.isTherapist', type='checkbox', name='isTherapist')
-                    label(for='isTherapist') &nbsp Yes
-                  .form-group
-                    label Is Full/Part Time:
-                  .form-group
-                    | &nbsp
-                    input#isFullTime(ng-model='therapist.isFullTime', type='checkbox', name='isFullTime')
-                    label(for='isFullTime') &nbsp Yes (not PRN)
-                .col-xs-6
-                  .form-group(ng-show='therapist.isTherapist')
-                    label Late Evals:
-                  .form-group(ng-show='therapist.isTherapist')
-                    label(for='monEval') &nbsp Mon &nbsp
-                    input#monEval(ng-model='therapist.lateEvals.mon', value=false, type='checkbox', name='monEval')
-                    label(for='tueEval') &nbsp Tue &nbsp
-                    input#tueEval(ng-model='therapist.lateEvals.tue', value=false, type='checkbox', name='tueEval')
-                    label(for='wedEval') &nbsp Wed &nbsp
-                    input#wedEval(ng-model='therapist.lateEvals.wed', value=false, type='checkbox', name='wedEval')
-                    label(for='thuEval') &nbsp Thu &nbsp
-                    input#thuEval(ng-model='therapist.lateEvals.thu', value=false, type='checkbox', name='thuEval')
-                    label(for='friEval') &nbsp Fri &nbsp
-                    input#friEval(ng-model='therapist.lateEvals.fri', value=false, type='checkbox', name='friEval')
-                  .form-group(ng-show='therapist.isFullTime')
-                    label Daily Schedule:
-                  .form-group(ng-show='therapist.isFullTime')
-                    label(for='monMins') Mon Mins &nbsp
-                    input#monMins.form-control(ng-model='therapist.schedule.mon.mins', type='number', name='monMins')
-                    label(for='tueMins') Tue Mins &nbsp
-                    input#tueMins.form-control(ng-model='therapist.schedule.tue.mins', type='number', name='tueMins')
-                    label(for='wedMins') Wed Mins &nbsp
-                    input#wedMins.form-control(ng-model='therapist.schedule.wed.mins', type='number', name='wedMins')
-                    label(for='thuMins') Thu Mins &nbsp
-                    input#thuMins.form-control(ng-model='therapist.schedule.thu.mins', type='number', name='thuMins')
-                    label(for='friMins') Fri Mins &nbsp
-                    input#friMins.form-control(ng-model='therapist.schedule.fri.mins', type='number', name='friMins')
-                    label(for='satMins') Sat Mins &nbsp
-                    input#satMins.form-control(ng-model='therapist.schedule.sat.mins', type='number', name='satMins')
-                    label(for='sunMins') Sun Mins &nbsp
-                    input#sunMins.form-control(ng-model='therapist.schedule.sun.mins', type='number', name='sunMins')
-              .row
-                button.btn.btn-warning(type='button', ng-click='cancel()') Cancel
-                | &nbsp &nbsp &nbsp
-                button.btn.btn-danger(type='button', ng-show='therapist._id', ng-click='remove()') Delete
-                button.btn.btn-primary.pull-right(type='submit', ng-show='editForm.$valid', ng-click='add()') Save Therapist
+            button.btn.btn-primary.pull-right(ng-click='add()') Save Therapist
+            button.btn.btn-danger.pull-right(ng-click='remove()') Delete
+          div(accordion, close-others='true')
+            accordion-group(is-open='general')
+              accordion-heading(ng-click='general=!general')
+                | General Information
+                i.fa.pull-right(ng-class='{\'fa-chevron-down\':general, \'fa-chevron-right\':!general}')
+              .col-xs-12
+                form.form(role='form', novalidate, name='editForm')
+                  .row
+                    .col-xs-6
+                      .form-group
+                        label(for='name') Name
+                        input.form-control#name(required, ng-minlength='3', ng-model='therapist.name', type='text', name='name', autofocus)
+                      .form-group
+                        label(for='discipline') Discipline
+                        select.form-control#discipline(required, ng-model='therapist.discipline', name='discipline')
+                          option(value='') Select Discipline
+                          option PT
+                          option OT
+                          option ST
+                      .form-group
+                        label Is Full/Part Time:
+                      .form-group
+                        | &nbsp
+                        input#isFullTime(ng-model='therapist.isFullTime', type='checkbox', name='isFullTime')
+                        label(for='isFullTime') &nbsp Yes (not PRN)
+                    .col-xs-6
+                      .form-group
+                        input(type='hidden', ng-model='curent._id')
+                        label(for='photo') Photo
+                        input.form-control#photo(type='file', ng-file-select='onFileSelect($files)', on-click='this.value = null')
+                      .form-group
+                        label(for='productivity') Productivity %
+                        input.form-control#productivity(required, ng-model='therapist.productivity', type='number', name='productivity')
+                      .form-group
+                        label Is Therapist:
+                      .form-group
+                        | &nbsp
+                        input#isTherapist(ng-model='therapist.isTherapist', type='checkbox', name='isTherapist')
+                        label(for='isTherapist') &nbsp Yes
+            accordion-group(is-open='schedule', ng-show='therapist.isFullTime')
+              accordion-heading(ng-click='schedule=!schedule')
+                | Schedule
+                i.fa.pull-right(ng-class='{\'fa-chevron-down\':schedule, \'fa-chevron-right\':!schedule}')
+              .col-xs-12
+                .row
+                  .col-xs-6
+                    .form-group
+                      label Daily Schedule:
+                    .form-group
+                      label(for='monMins') Mon Mins &nbsp
+                      input#monMins.form-control(ng-model='therapist.schedule.mon.mins', type='number', name='monMins')
+                      label(for='tueMins') Tue Mins &nbsp
+                      input#tueMins.form-control(ng-model='therapist.schedule.tue.mins', type='number', name='tueMins')
+                      label(for='wedMins') Wed Mins &nbsp
+                      input#wedMins.form-control(ng-model='therapist.schedule.wed.mins', type='number', name='wedMins')
+                      label(for='thuMins') Thu Mins &nbsp
+                      input#thuMins.form-control(ng-model='therapist.schedule.thu.mins', type='number', name='thuMins')
+                  .col-xs-6
+                    br
+                    br
+                    .form-group
+                      label(for='friMins') Fri Mins &nbsp
+                      input#friMins.form-control(ng-model='therapist.schedule.fri.mins', type='number', name='friMins')
+                      label(for='satMins') Sat Mins &nbsp
+                      input#satMins.form-control(ng-model='therapist.schedule.sat.mins', type='number', name='satMins')
+                      label(for='sunMins') Sun Mins &nbsp
+                      input#sunMins.form-control(ng-model='therapist.schedule.sun.mins', type='number', name='sunMins')
+            accordion-group(is-open='evals', ng-show='therapist.isTherapist')
+              accordion-heading(ng-click='evals=!evals')
+                | Lave Eval Days
+                i.fa.pull-right(ng-class='{\'fa-chevron-down\':evals, \'fa-chevron-right\':!evals}')
+              .col-xs-12
+                .row
+                  .col-xs-6
+                    .form-group
+                      label Late Evals:
+                    .form-group
+                      label(for='monEval') &nbsp Mon &nbsp
+                      input#monEval(ng-model='therapist.lateEvals.mon', value=false, type='checkbox', name='monEval')
+                      label(for='tueEval') &nbsp Tue &nbsp
+                      input#tueEval(ng-model='therapist.lateEvals.tue', value=false, type='checkbox', name='tueEval')
+                      label(for='wedEval') &nbsp Wed &nbsp
+                      input#wedEval(ng-model='therapist.lateEvals.wed', value=false, type='checkbox', name='wedEval')
+                      label(for='thuEval') &nbsp Thu &nbsp
+                      input#thuEval(ng-model='therapist.lateEvals.thu', value=false, type='checkbox', name='thuEval')
+                      label(for='friEval') &nbsp Fri &nbsp
+                      input#friEval(ng-model='therapist.lateEvals.fri', value=false, type='checkbox', name='friEval')
+                    .form-group
+                      input(type='hidden', ng-model='therapist._id', ng-value='{{therapist._id}}')
