schedule page v1 completed

--- a/client/index.less
+++ b/client/index.less
@@ -1,6 +1,7 @@
 body{
   //background-image: url('assets/img/weave.png');
   font-family: helvetica;
+  color: #1f1f1f;
 }
 
 #body{
@@ -20,4 +21,8 @@ form{
   }
 }
 
+.navbar{
+  background-color: #ffffff;
+  border-radius: 0;
+}
 
