--- a/client/views/schedule/schedule.less
+++ b/client/views/schedule/schedule.less
@@ -1,5 +1,5 @@
 .therapist{
-  background-color: lightgrey;
+  background-color: #f1f0ee;
   border-radius: 6px;
   width: 300px;
   padding: 10px;
@@ -7,6 +7,32 @@
   display: inline-block;
 }
 
+hr{
+  border-color: #1f1f1f;
+}
+
 h4{
   font-weight: bold;
+  font-size: 22px;
+}
+
+h5{
+  font-size: 1.3em;
+}
+
+.fa-remove{
+  color: #e51c23;
+}
+
+.btn{
+  margin-bottom: 50px;
+}
+
+label{
+  font-size: 1.4em;
+  color: #444444;
+}
+
+input[type=text].form-control{
+  width: 80px;
 }
